# Crypt

./: .gitignore  README.md  fixit.sh
Chaste_models/: output.err
Chaste_models/ChasteMembrane/: CI_sweep_chaste.sh  CMakeLists.txt  Crypt notes.txt  TODO.txt  ci_local_sweep.sh  farSerrated.mat  grid_search.txt  grid_search_1.txt  grid_search_2.txt  kill_count_params.txt  mac_driving_force.sh  matlab.mat  optimals.mat  random_search.txt  serrated.mat  sweep.sh  sweep.txt  tasks  test.sh  transfer_between_phoenix.sh  untitled.m  untitled11.m  untitled2.m  untitled22.m  untitled4.m
Chaste_models/CylindricalCrypt/: CMakeLists.txt
Chaste_models/DynamicCrypt/: CMakeLists.txt
Chaste_models/LabellingIndex/: .project  CMakeLists.txt  RunPhaseLabel.sh  SConscript
Chaste_models/LabellingIndex/.svn/: wc.db
Chaste_models/LabellingIndex/bash/: LI_S_1_experiment.sh  LI_S_5_experiment.sh  transfer_to_phoenix.sh
Chaste_models/LabellingIndex/processing/: get_score_line.m  plot_labelling_index.m
Chaste_models/LabellingIndex/src/CellSorting/: DifferentialAdhesionCaSwitchingUpdateRule.cpp
Chaste_models/LabellingIndex/src/MorphogenMonolayer/: AdhesionCaSwitchingUpdateRule.cpp  AdhesionCaSwitchingUpdateRule.hpp  MorphogenCellwiseSourceParabolicPde.hpp  MorphogenDependentCellCycleModel.cpp
Chaste_models/LabellingIndex/test/: CMakeLists.txt  ContinuousTestPack.txt  TestPhaseLabellingIndex.hpp
Matlab_models/: ForceFiguresPaper.m  divisionProblem.mat  drawPill.m  fixedBuckle.mat  freeCellFail.mat  t.mat  tutorialApp.mlapp  untitled.m  untitled4.m
(+1251 files in other folders)
